@@ -1,5 +1,11 @@
 2002-11-12  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
+	* [w3m-dev 03418] Re: tab browser
+	* display.c (redrawNLine): s/clrtoeol/clrtoeolx/
+				move rootY
+
+2002-11-12  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
 	* [w3m-dev 03417] install_w3mimgdisplay
 	* configure: define install_w3mimgdisplay 
 			after use_w3mimg_fb determined
